# learningOpenGL

./: CMakeLists.txt  Makefile  camera.h  compile_commands.json  lightingShader.fs  main  section1.cpp  section2.cpp
.cache/clangd/index/: _fixes.hpp.AC44B0E8C9E4DBA7.idx  _fixes.hpp.EEC8B45084DF1EF1.idx  _vectorize.hpp.592D24E4F7DAAEEA.idx  _vectorize.hpp.D75D2C04B2273272.idx  camera.h.25D3AF93AF1B3E1D.idx  camera.h.867CB54375D4DE65.idx  common.h.37852DBBD7C9B5C1.idx  common.h.86380C017931F891.idx  common.hpp.3518322F3EC91850.idx  common.hpp.BF8418754DF74E1F.idx  constants.hpp.2A707AB9A75044A5.idx  constants.hpp.AC5348E16849FCCB.idx  constants.inl.2986E6DF45E4756B.idx  constants.inl.BC0808C6D128290F.idx  exponential.h.0104336A9BA3BE64.idx  exponential.h.82BC22B4FB5E2628.idx  exponential.hpp.A0A4EFED99CEF201.idx  exponential.hpp.BC1C373DC4D244EF.idx  func_common.hpp.17D34640CB36AC22.idx  func_common.hpp.E3236DAF86D03403.idx  func_common.inl.2E22CF74626F2AC0.idx  func_common.inl.981D86389FEA6A0A.idx  func_common_simd.inl.D857F48C45821046.idx  func_common_simd.inl.DD695311459FDD14.idx  func_exponential.hpp.B8B9CC90C34AF086.idx  func_exponential.hpp.CDA4995A89CE91E7.idx  func_exponential.inl.7392FADB024EA940.idx  func_exponential.inl.99CB66A3FE854B13.idx  func_exponential_simd.inl.2CAC98B8D6773D76.idx  func_exponential_simd.inl.62CF69F05F7B4B5A.idx  func_geometric.hpp.90EB1FE9F457011B.idx  (+187 more)
includes/: camera.h  mesh.h  model.h
includes/glad/src/: glad.c
shaders/: lightCubeShader.fs  lightCubeShader.vs  lightingShader.fs  lightingShader.vs
src/: lighting.cpp  main.cpp
(+3 files in other folders)
